--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,11 +1,3 @@
-
-<div class="center">
-  <h2 style="color:aliceblue">{{title}}</h2>
-  <span>
-    <b><a routerLink="/home" >Home</a></b>&nbsp;
-   <b><a routerLink="/about" >About Us</a></b>&nbsp;
-   <b> <a routerLink="/contact" >Contact</a></b>&nbsp;
-   <b> <a routerLink="/faqs" >FAQs</a></b>&nbsp;
-</span><br/>
-<router-outlet></router-outlet>
+<div>
+  <router-outlet></router-outlet>
 </div>
