--- a/app/home/home.component.css
+++ b/app/home/home.component.css
@@ -1,10 +1,50 @@
-.div{
+.header {
+    overflow: hidden;
+    background-color: azure;
+    padding: 20px 10px;
+  }
+  section{
+    display:inline-block;
+    align-content: center;
+    align-items: center;
+    padding: 30px;
+  }
+  #center{
     text-align: center;
-    background-color: rgb(42, 165, 128);
-}
-.center{
-    
-        margin-left: auto;
-        margin-right: auto;
-     
-}
+    background-color: aliceblue;
+  }
+  
+  h2{
+    text-align: center;
+   color: red;
+  }
+  .header a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px; 
+    line-height: 25px;
+    border-radius: 4px;
+  }
+  
+  .header a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .header a.active {
+    background-color: dodgerblue;
+    color: white;
+  }
+  
+  .header-right {
+    float: right;
+  }
+  footer{
+    text-align: center;
+    color: brown;
+  }
+
+  
