--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,48 +1,57 @@
-<div class="div">
-    <h2>Students Data</h2>
-    <table class="center">
-        <thead>
-            <tr>
-                <th>ID</th>&nbsp;
-                <th>Name</th>&nbsp;
-                <th>City</th>&nbsp;
-                <th>Gender</th>&nbsp;
-                <th>Branch</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let student of studentList" >
-                <td>{{student.Id}}</td>&nbsp;
-                <td>{{student.Name}}</td>&nbsp;
-                <td>{{student.city}}</td>&nbsp;
-                <td>{{student.Gender}}</td>&nbsp;
-                <td>{{student.Branch}}</td>
-            </tr>
-            
-        </tbody>
-    </table>
-
-    <h2>NgSwitch</h2>
-    <h3>Select Country</h3>
-    <select (change)="SetDropDownValue($event)">
-      <option value="">Select</option>
-      <option value="In">In</option>
-      <option value="AUS">AUS</option>
-      <option value="UK">UK</option>
-    </select>
-    <h4>You Have to Selected</h4>
-    <div [ngSwitch] = 'dropDownValue'>
-      <h5 *ngSwitchCase="'In'">India</h5>
-      <h5 *ngSwitchCase="'AUS'">Australia</h5>
-      <h5 *ngSwitchCase="'UK'">United Kingdom</h5>
-      <h5 *ngSwitchDefault="">You have not selected any country</h5>
+<div id="center">
+    <header> 
+      <div class="header">
+        <div>
+          <a href="#default" class="logo"><img src=".\assets\youtube.jfif" width="100px"></a>
+        </div>
+          <h2 >Welcome !!</h2>&nbsp;
+          <div id="box" class="input-group rounded" style="text-align: center;width: 750px;height: 20px;">
+            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+            <span class="input-group-text border-0" id="search-addon"><a><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+            </svg>
+            <i class="bi bi-search"></i></a>
+            </span>
+          </div><br/><br/>
+          <div class="header-right">
+          <a class="active" routerLink="/home"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
+            <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
+          </svg><i class="bi bi-house-door"></i>Home</a>
+          <a routerLink="/explore">Explore</a>
+          <a routerLink="/subscription"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-play-btn" viewBox="0 0 16 16">
+            <path d="M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
+            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+          </svg><i class="bi bi-play-btn"></i>Subscription</a>
+          <a routerLink="/contact">Contact Us</a>
+          </div>
+      </div>  
+    </header>  
+    <hr/>
+    <br/>
+    <div style="text-align: center;">
+         <section>
+          <iframe  width="440" height="372" 
+            src="https://www.youtube.com/embed/zAlX1V3lK5s">
+          </iframe>
+         </section>
+         <section>
+          <iframe  width="440" height="372" 
+            src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://example.com">
+          </iframe>
+         </section>
+         <section>
+            <iframe  width="440" height="372" 
+              src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com">
+            </iframe>
+           </section>
+           <section>
+            <iframe  width="440" height="372" 
+              src="http://www.youtube.com/embed/W7qWa52k-nE">
+            </iframe>
+           </section>
     </div>
-
-  <h4>NgStyle</h4>
-  <div *ngFor="let stu of studentList">
-     <p [ngStyle]="{'background-color':stu.Gender === 'Male' ? 'red' : 'green' }">
-    ID:  {{ stu.Id}} Name: {{ stu.Name }}  Gender:  {{stu.Gender}} Branch:  {{stu.Branch}}  
-     </p>
-   </div>
-</div>
-
+    <footer>  
+       @Copyright Youtube 2020- All Right Reserved.   
+    </footer>  
+    
+    </div>
